Identificação dinâmica do tipo do parâmetro passado e validação do método pelos parâmetros passados